rfnchart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rfnchart
  name: rfnchart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rfnchart
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rfnchart
    spec:
      containers:
      - image: harssssshh/redditfornormies
        name: redditfornormies
        ports:
        - containerPort: 8080
        resources: {}
status: {}
