rfnchart/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rfn-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  rules:
    - host: "phoenixapp.ga"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
              name: rfnchart
              port:
               number: 8080
